attack chain rework